# pylumagen

./: LICENSE  Makefile  README.md  setup.cfg
lumagen/: __init__.py  classes.py  command_executor.py  connection.py  constants.py  device_manager.py  dispatcher.py  messages.py  models.py  state_manager.py  utils.py
scripts/: __init__.py  lumagen_app.py
tests/: __init__.py  test_01_classes.py  test_02_utils.py  test_03_models.py  test_04_dispatcher.py  test_05_messages.py  test_06_state_manager.py  test_07_connection.py  test_08_serial_handler.py  test_09_ip_handler.py  test_10_command_executor.py  test_11_device_manager.py
