[metadata]
name = pylumagen
version = attr: lumagen.__version__
description = "A python client library for the Lumagen RP Processor."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johncarey70/pylumagen
author = John Carey
author_email = febuhler@yahoo.com
licence = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Home Automation
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.13

[options]
packages = lumagen, scripts

install_requires =
    pyserial-asyncio-fast >= 0.14.0,
    pydantic >= 2.10.5,
    propcache >= 0.2.1,
    prompt_toolkit >= 3.0.48,

[options.package_data]
lumagen = py.typed

[options.entry_points]
console_scripts =
    lumagen-cli = scripts.lumagen_app:main